--- a/garciaj/index.html
+++ b/garciaj/index.html
@@ -52,6 +52,88 @@
          </article>
 
          <!-- Module 1.2 Blog Post Starts here -->
+        <article>
+    <header class="article-header">
+        <h2>Thinking in Life Cycles</h2>
+        <p>By: Jose Garcia</p>
+        <p>Central Washington University | IT312: Digital Designing Environments</p>
+    </header>
+
+    <section>
+        <p>Digital systems operating today require a systematic approach which spans their entire operational period from requirement definition to system retirement. The Systems Development Life Cycle (SDLC) serves as the core framework which systems engineering uses according to this research. The analysis uses industry standards and structured life cycle models to establish the SDLC framework which includes a detailed evaluation of linear and iterative and incremental models. This research examines how life cycle thinking enables designers to create digital systems which maintain their original design intent while sustaining themselves throughout time and adapting to technological advancements in modern fast-paced technological environment.</p>
+    </section>
+
+    <section>
+        <h3>Introduction</h3>
+        <p>A system in systems engineering and software development exists as a dynamic entity which has a limited time span before it reaches its end of life. The SDLC serves organizations as their method to manage the complex process of creating and maintaining these systems. This structured approach results in high-quality products that meet customer requirements at a higher level than expected while completing projects both on time and under budget (TechTarget, n.d.). The selection of appropriate project methods depends on understanding three main models which include linear and iterative and incremental approaches.</p>
+    </section>
+
+    <section>
+        <h3>Defining the Systems Development Life Cycle</h3>
+        <p>The Systems Development Life Cycle follows the system development process through multiple defined stages. The six core stages of a standard life cycle include:</p>
+        
+        <ul>
+            <li><strong>Conception:</strong> The identifying phase where stakeholders establish requirements and define project boundaries to ensure the proposal is feasible (Intellectsoft, n.d.).</li>
+            <li><strong>Development:</strong> Designers create the system, identify solutions, and break the system down into subsystems and components.</li>
+            <li><strong>Production:</strong> The realization phase involving actual coding and building, where verification ensures the system matches technical requirements.</li>
+            <li><strong>Utilization:</strong> The system is deployed and validated to confirm it addresses the user problem it was designed to solve.</li>
+            <li><strong>Support:</strong> Ongoing maintenance, bug fixing, and help-desk assistance that allows the system to adjust to environmental changes.</li>
+            <li><strong>Retirement:</strong> The end of the life cycle marking decommissioning, requiring protected asset removal and data migration.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h3>Linear Life Cycle Models</h3>
+        <p>The linear life cycle model follows the "Waterfall" approach, a sequential process requiring stage-by-stage completion before starting the next stage.</p>
+        <h4>Characteristics, Advantages, and Drawbacks</h4>
+        <ul>
+            <li><strong>Characteristics:</strong> Follows a strict framework where each stage produces results used as input for the next; requirements must stay constant.</li>
+            <li><strong>Advantages:</strong> Easy to understand and manage because progress is clearly visible against a timeline.</li>
+            <li><strong>Drawbacks:</strong> Keeping parameters fixed is a major limitation; detecting errors late in the cycle is difficult and costly to correct (TechTarget, n.d.).</li>
+        </ul>
+    </section>
+
+    <section>
+        <h3>Iterative Life Cycle Models</h3>
+        <p>The iterative model consists of multiple recurring phases which construct the system through continuous loops instead of a single sequence.</p>
+        <h4>Characteristics, Advantages, and Drawbacks</h4>
+        <ul>
+            <li><strong>Characteristics:</strong> Teams create a fundamental version, evaluate it, and improve it in the following cycle.</li>
+            <li><strong>Advantages:</strong> Flexible approach allowing for continuous feedback; serves as the base for Agile methodologies (Intellectsoft, n.d.).</li>
+            <li><strong>Drawbacks:</strong> Challenging to manage from a budgetary and scheduling perspective; can lead to "analysis paralysis".</li>
+        </ul>
+    </section>
+
+    <section>
+        <h3>Incremental Life Cycle Models</h3>
+        <p>The incremental model breaks system development into separate functional components known as increments.</p>
+        <h4>Characteristics, Advantages, and Drawbacks</h4>
+        <ul>
+            <li><strong>Characteristics:</strong> Increments are developed and delivered in stages; a partial version may be in use while the next is in development.</li>
+            <li><strong>Advantages:</strong> Early delivery of value; users do not have to wait for the entire system to be finished to start using critical features.</li>
+            <li><strong>Drawbacks:</strong> Architectural integrity is a primary challenge; if the first design isn't strong, the system may become a collection of disconnected patches.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h3>The Importance of Life Cycle Thinking</h3>
+        <p>Life cycle thinking drives digital system design and sustainability. Designers who evaluate Support and Retirement stages during the Conception phase develop systems with simpler maintenance processes. This is inherently tied to the Technology Life Cycle (Research, Ascent, Maturity, Decline); planning for updates enables systems to transition smoothly when technologies reach their end of life.</p>
+    </section>
+
+    <section>
+        <h3>Conclusion</h3>
+        <p>The Systems Development Life Cycle serves as the core methodology enabling professionals to manage complex modern engineering operations. Managing digital systems from beginning to end of service helps organizations create systems that survive through time while remaining strong against technological changes.</p>
+    </section>
+
+    <footer class="article-footer">
+        <h3>Sources:</h3>
+        <ol>
+            <li>Holt, J. (2021). <em>Systems engineering demystified: A practitioner's handbook for developing complex systems</em> (2nd ed.). Packt Publishing.</li>
+            <li>Intellectsoft. (n.d.). <em>What is system development life cycle?</em> https://www.intellectsoft.net/blog/what-is-system-development-life-cycle/.</li>
+            <li>TechTarget. (n.d.). <em>Systems development life cycle (SDLC).</em> https://www.techtarget.com/searchsoftwarequality/definition/systems-development-life-cycle.</li>
+        </ol>
+    </footer>
+</article>
 
          <!-- Module 2.1 Blog Post Starts here -->
 
