Added Blog Post 1.2
Added the write up with html formatting

--- a/gavrilisn/index.html
+++ b/gavrilisn/index.html
@@ -68,6 +68,151 @@
 </article>
 
          <!-- Module 1.2 Blog Post Starts here -->
+          <article class="blog-article">
+  <h2>Module 1.2 Post</h2>
+  <h3>Nick Gav</h3>
+
+  <h3>Introduction</h3>
+  <p>
+    The word <em>system</em> covers many types of things throughout the natural and digital world.
+    As a system becomes more complex, subsystems contain more and more concepts. This can make
+    digital systems especially hard to understand and maintain. For that reason, it is important
+    to look at the system development life cycle (SDLC). This is a structured guide on how a
+    digital system is created, maintained, and eventually retired. This includes designing,
+    building, testing, deployment, and maintenance. This is essentially the life story of a
+    particular system. When you examine a digital system with the life cycle in mind, you realize
+    that they are evolving and do not stay the same. Digital systems change as they are faced with
+    new factors like security threats, new technologies, or any number of other factors. It is
+    important for digital systems to keep evolving in order to remain useful and relevant. Without
+    a life cycle approach, digital systems could become outdated and impractical. There are three
+    different life cycle models: linear, iterative, and incremental. These are all different models
+    with different usefulness depending on the situation (Holt, 2021). In this post I will describe
+    the SDLC and compare the three major life cycle models, as well as discuss why life cycle
+    thinking is essential for building digital systems that will last.
+  </p>
+
+  <p>
+    The SDLC is a framework that is used to track the phases that a system goes through during its
+    lifetime. For example, if a company is developing new software, they use the SDLC as a way to
+    plan the requirements necessary to design, build, implement, and maintain it. It serves as a
+    roadmap that is shared between different teams working on the same software. This helps ensure
+    that the process goes smoothly, instead of the development being unpredictable (Holt, 2021).
+  </p>
+
+  <h3>Linear Model</h3>
+  <p>
+    The first model I will discuss is the linear model, also known as the Waterfall model. This
+    model is considered to be one of the oldest ways that software or other digital systems are
+    developed. You complete one step before moving on to the next phase. This typically starts
+    with understanding the requirements of the system. This step involves establishing what the
+    intended software is meant to achieve. Is it a new and improved VPN? Whatever it may be,
+    mapping how the software needs to work specifically is key. Once the requirements are
+    established, the next step is the design phase. For software development, there are two levels
+    of design: high and low level. Higher-level design involves the architecture of the digital
+    system, while lower-level design involves logical decisions (GeeksforGeeks, 2023).
+  </p>
+
+  <p>
+    After that is the development phase, where the team works on creating the digital system. Once
+    it is developed, the system enters the testing phase. This is to ensure the software works
+    correctly and meets the requirements. Once the software is shown to meet the requirements set
+    for it, it is deployed. This means people can now use the company’s VPN. While the system
+    remains active, it must be maintained. This means fixing errors from release and others that
+    may arise (GeeksforGeeks, 2023).
+  </p>
+
+  <p>
+    An advantage of the linear model is that it is easy for a team to grasp. Since it follows a
+    predictable path, you can ensure that development is straightforward. Since each phase is
+    clear, all team members know exactly what their goals are. This type of model is often best
+    suited for smaller-scale projects. The downside is that the development cycle lacks
+    flexibility. If, for instance, our VPN requirements change, this model would have a hard time
+    adapting depending on which phase the team was currently in. With software especially,
+    problems can often reveal themselves late. As Sommerville (2016) points out, this can lead to
+    increased costs due to rework and delayed delivery. This is especially important in the digital
+    world, as it is fast-moving and ever-changing.
+  </p>
+
+  <h3>Iterative Model</h3>
+  <p>
+    The next model we will discuss is the iterative model. This is a different approach where,
+    rather than building the entire system at once, it is built in cycles. Each iteration creates a
+    working version of the software which can be tested, examined, and refined. This process also
+    involves planning the requirements, design and architecture, and development/implementation
+    (Talreja, 2023). Let’s say the first attempt at a company’s VPN makes the customers’ computers
+    slow by using too much RAM. The team will look at what worked and what didn’t, and continue to
+    make improvements. Then the company would release their VPN 2.0.
+  </p>
+
+  <p>
+    The advantage of this model is that since requirements can often change or be uncertain, this
+    allows the team to evolve the digital system to meet those requirements. Since each iteration
+    is a working system, teams can find issues early and make changes before too much work is
+    already done. This can help reduce risk and allow the team to continue to innovate. Although
+    flexibility can be seen as an advantage, it can also be a drawback regarding digital systems.
+    It lacks the strong focus of the linear model, meaning that it may not align with intended
+    requirements or stakeholder expectations. However, this type of model would be great in
+    creating complex software, like our VPN (Talreja, 2023).
+  </p>
+
+  <h3>Incremental Model</h3>
+  <p>
+    The incremental model breaks the project down into smaller, more manageable pieces referred to
+    as increments. Each of these increments adds new functions to the existing system. The
+    advantage of this model is that users don’t have to wait for the entire system to be finished.
+    For example, our VPN is now available for those in Brazil. It is not yet ready for the rest of
+    the world, but piece by piece we can work closer to our goal. The downside of this approach is
+    that integration of new increments can be tricky. If we add our coverage of Mexico to our
+    coverage with Brazil, will there be any unforeseen problems? This approach would fit best in a
+    large company with many moving parts (Sommerville, 2016).
+  </p>
+
+  <h3>Life Cycle Mindset</h3>
+  <p>
+    Understanding system development life cycle models is important, but it’s also beneficial to
+    think with a life cycle mindset. It is important to understand that all systems, natural and
+    digital, are not static. They grow, evolve, and face extinction if not properly maintained. For
+    digital systems, this thinking is essential for teams to be able to create systems that are
+    sustainable and adaptable (Holt, 2021).
+  </p>
+
+  <p>
+    The first reason life cycle thinking is important is that it forces a team to think beyond the
+    initial build. Complexity often comes from interactions, not from individual components. By
+    considering the full life cycle, teams can design systems that are easier to manage (Holt,
+    2021). Systems also have the habit of degrading over time. If we leave our VPN without proper
+    maintenance and updates, it will begin to fail. By developing our VPN with life cycle
+    principles, our systems will be more resilient and successful because we can anticipate change
+    rather than be purely reactive.
+  </p>
+
+  <p>
+    Another aspect of digital systems is that they constantly need to evolve. Iterative and
+    incremental models both support this because they allow continuous improvement and adaptation
+    as requirements and environments change (Sommerville, 2016; Talreja, 2023).
+  </p>
+
+  <h3>Conclusion</h3>
+  <p>
+    The system development life cycle should be more than just a development plan; it should be a
+    way of thinking about how digital systems grow and change. The linear model offers a
+    straightforward structure, the iterative model offers continuous improvement, and the
+    incremental model gives users early access to features. None of these models are perfect, and
+    the choice depends on the type of digital system and the context in which it is being
+    developed. Most importantly, thinking in life cycle terms ensures that digital systems are
+    designed to adapt to the changing technology landscape and remain useful over time (Holt,
+    2021; Sommerville, 2016).
+  </p>
+
+  <footer class="article-footer">
+    <h4>Sources</h4>
+    <p>GeeksforGeeks. (2023, December 22). <em>Software development models SDLC models</em>. GeeksforGeeks. https://www.geeksforgeeks.org/software-engineering/sdlc-models-types-phases-use/</p>
+    <p>Holt, J. (2021). <em>Systems engineering demystified</em> (2nd ed.). Packt Publishing.</p>
+    <p>Sommerville, I. (2016). <em>Software engineering</em> (10th ed.). Pearson.</p>
+    <p>Talreja, A. (2023, April 17). <em>Iterative model in SDLC: An in-depth look – Nextra</em>. TeachingAgile.com. https://teachingagile.com/sdlc/models/iterative</p>
+  </footer>
+</article>
+
 
          <!-- Module 2.1 Blog Post Starts here -->
 
